--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,6 @@
 /* body {
   @apply text-netural-100 bg-neutral-900;
 } */
+.btn {
+  @apply rounded bg-blue-500 py-2 px-4 font-bold text-white hover:bg-blue-700;
+}
