chore: fixed some auth and styling stuff

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body {
-  @apply text-netural-100 bg-neutral-900;
-} */
-/* .btn {
-  @apply rounded bg-blue-500 py-2 px-4 font-bold text-white hover:bg-blue-700;
-} */
+/* If the user prefers dark mode, 
+we of course apply color-scheme: dark, as usual */
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+/* If the user prefers light mode, 
+we still enforce color-scheme: dark, despite the user preference */
+@media (prefers-color-scheme: light) {
+  html {
+    color-scheme: dark;
+  }
+}
